--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dbus = "0.8"
 glium = "0.26"
 imgui = "0.3"
 imgui-glium-renderer = "0.3"
