--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,11 @@ log = "0.4"
 env_logger = "0.7"
 clap = "2.33"
 structopt = "0.3"
+
+config = "0.10"
+serde = {version = "1.0", features = ["derive"]}
+
+directories = "2.0"
+anyhow = "1.0"
+
+tempfile = "3.1"
