--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ license = "MIT"
 
 [dependencies]
 dbus = "0.8"
-gtk = "0.8"
+# Needed for xalign on labels to make it not center text weirdly.
+gtk = {version = "0.8", features = ["v3_16"]}
 gio = "0.8"
 glib = "0.9"
 gdk = "0.12"
